Fix broken theme colors with classic theme.
Originally part of https://github.com/Eclipse-Community/r3dfox/commit/a044e875ce76e63e334ddb4f55d15f064d98fbbc, had forgotten what this did, but now I know. The toolbar colors become lighter with classic theme and it looks wrong. This fixes it to be correct. The -moz-dialog bit removed at the bottom just applies the --toolbar-bgcolor above but only to Aero theme, so I remove it since it's useless now.

--- a/toolkit/themes/shared/design-system/src/toolbar.css
+++ b/toolkit/themes/shared/design-system/src/toolbar.css
@@ -120,11 +120,7 @@
 @media not ((forced-colors) or (-moz-native-theme)) {
   :root:not([lwtheme]) {
     --toolbar-color: light-dark(var(--color-gray-100), var(--color-gray-05));
-@media not (-moz-platform: windows-win7) {
-  @media not (-moz-platform: windows-win8) {
     --toolbar-bgcolor: light-dark(#f9f9fb, rgb(43, 42, 51));
-  }
-}
 
     --toolbar-field-border-color: var(--border-color-transparent);
     --toolbar-field-background-color: light-dark(rgba(0, 0, 0, 0.05), var(--color-black-alpha-30));
@@ -144,11 +140,5 @@
     --toolbox-textcolor-inactive: var(--toolbox-textcolor);
   }
 }
-  }
-}
-
-@media (-moz-windows-default-theme) {
-  :root {
-    --toolbar-bgcolor: -moz-dialog;
   }
 }
